--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,8 +2,7 @@ services:
     ## Listens on the command line
     kernel.listener.command_dispatch:
         class: EXS\ErrorBundle\Services\Listeners\ConsoleExceptionListener
-        arguments:
-            logger: "@exs.exception_log_manager"
+        arguments: ["@exs.exception_log_manager"]
         tags:
             - { name: kernel.event_listener, event: console.exception }
     ## Manages the entity for exceptions
